--- a/kadai.css
+++ b/kadai.css
@@ -33,7 +33,6 @@ main {
   background-position: bottom;
   background-size: cover;
 }
-
 .step-img2 {
   height: 150px;
   background-image: url(img/flow02.png);
@@ -62,11 +61,11 @@ main {
 }
 
 footer {
-  height: 100%;
+  height: 50px;
   background-color: #aaa;
 }
 
-@media screen and (max-width:425px) {
+@media screen and (max-width:768px) {
     
   header {
   width:  100%;
