--- a/kadai.css
+++ b/kadai.css
@@ -74,10 +74,7 @@ footer {
 
   main {
   width: 100%;
-  margin: 0 20px;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  
+  margin: 50px 20px;
   display: block;
   }
   
